[package]
name = "jswk_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
base64-url = "3.0.0"
chrono = "0.4.42"
derive_more = "2.0.1"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
log = "0.4.28"
rand = "0.8"
rsa = "0.9.8"
serde = {version = "1.0", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
